@@ -1,3 +1,8 @@
+2000-05-09  Per Bothner  <per@bothner.com>
+
+	* Interpeter.java (languages):  New static table.
+	(getInstance):  New overloaded static methods.
+
 2000-04-22  Per Bothner  <per@bothner.com>
 
 	* PrimProcedure.java (init):  New private helper method.
